stylesheet.less
/* ... */
body {
    background-color: @color-swatch1;
    margin: 0;
    padding: 0;
    border-top: 6px solid @color-swatch2;
}

/* ===============================
   CUSTOM CSS
   =============================== */

.top-nav {
  display: none;
}

.left-nav {
  background: transparent;
  z-index: 9999;
  width: 200px;
  height: 100%;
  position: fixed;
  top: 0px;
  left: 0px;
  margin-top: 6.4em;
}

.right-content { 
  padding-left: 200px;
}

.main {
  padding: 6em 1em 0 2em;
  @media only screen and (max-width: 1500px) { 
    width: 90%;
  }
  @media only screen and (max-width: 1280px) { 
    width: 80%;
  }
  @media only screen and (max-width: 900px) { 
    width: 75%;
  }
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}

/* DEFAULT PAGE TYPE */

.bk-pt-default .main {
  padding-top: 6em;
  min-height: 600px;
}

/* ===============================
   VERICAL HEADER AND NAV
  =============================== */

.bk-header {
  padding: 20px 10px 0;
  margin: 0;
  border-right: 1px solid @color-swatch4;
  @media only screen and (max-width: 768px) { 
    border-right: none;
  }
  nav {
    width: 100%;
    background-color: @color-swatch7;
  }
  &.widget-content {
    width: 100%;
  }
}

.vertical-nav {
  border-right: 1px solid @color-swatch4;
  float: left;
}

.companyheader {
  display: block;
}

/* COMPANY NAME */

.widget.companyname {
  text-align: right;
  overflow: hidden;
  a:hover {
    text-decoration: none;
  }
}

.widget.companyname a, .bk-header .widget.content p {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch10-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
  padding: 0;
  text-align: right;
  @media only screen and (max-width: 768px) { 
    text-align: left;
    width: 100%;
  }
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
  background-color: @color-swatch2;
  padding: 20px 0 0 230px;
  margin-top: 1em;
  color: @color-swatch6;
  text-align: right;
  h1, h2, h3, h4 {
    color: @color-swatch1;
    padding-bottom: 20px;
  }
}

/* ===============================
   VERTICAL NAVIGATION
   =============================== */

.vertical-nav {
  .widget.extendednavigation {
    text-align: left;
    position: relative;
    background-color: @color-swatch1;
    ul {
      padding: 150px 0 0 10px;
      margin: 0;
      text-align: left;
      background-color: @color-swatch1;
      li {
        display: block;
        width: 100%;
        a {
          display: block;
          padding: 10px;
          font-family: @font-swatch6-font-family;
          font-size: @font-swatch6-font-size;
          font-weight: @font-swatch6-font-weight;
          color: @font-swatch6-color;
          line-height: @font-swatch6-line-height;
          letter-spacing: @font-swatch6-letter-spacing;
          text-align: right;
          &:hover {
            color: @font-swatch6-color-hover;
            text-decoration: none;
          }
          &.pull {
            display: none;
          }
        }
        &.folder {
          cursor: pointer;
          text-align: right;
          padding: 0;
          .text {
            display: block;
            padding: 10px 22px 10px 0;
            font-family: @font-swatch6-font-family;
            font-size: @font-swatch6-font-size;
            font-weight: @font-swatch6-font-weight;
            color: @font-swatch6-color;
            line-height: @font-swatch6-line-height;
            letter-spacing: @font-swatch6-letter-spacing;
            &:hover {
              color: @font-swatch6-color-hover;
              text-decoration: none;
            }
          }
        }
      }
    }
  }
}

.vertical-nav .widget.extendednavigation ul li.folder > ul > li .text:hover {
  background-image: none;
}

/* DROPDOWN MENU */

.vertical-nav .widget.extendednavigation li > ul {
    display: none;
}

.vertical-nav .widget.extendednavigation li:hover > ul {
    display: block;
    position: absolute;
    width: 100%;
    background-color: @color-swatch7;
    z-index: 500;
    padding: 0;
    margin: -44px 0 0 189px;
    border-left: 1px solid @color-swatch4;
}

.vertical-nav .widget.extendednavigation li:hover > ul > li {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
}

.vertical-nav .widget.extendednavigation li:hover > ul > li > a {
    display: block;
    padding: 0;
}

.vertical-nav .widget.extendednavigation ul li.folder ul li .text {
  color: @font-swatch6-color;
  text-align: left;
  padding: 10px 15px 10px 10px;
}


/* EXTENDED NAVIGATION - INSIDE ZONE */

.main .widget.extendednavigation {
    max-width: 100%;
    width: 100%;
    float: none;
}

/* ===============================
   CONTENT
   =============================== */

.widget.content {
  padding: 0;
  overflow: hidden;
  span.expand {
    font-family: @font-swatch3-font-family;
    background-color: @color-swatch3;
    color: @font-swatch7-color;
    font-size: @font-swatch5-font-size;
    padding: 4px 8px;
    margin: 4px 0;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    cursor: pointer;
    display: inline-block;
    &:hover, &:focus {
      cursor: pointer;
      background-color: darken(@color-swatch3,5%);
    }
  }
}

/* ===============================
   IMAGE WIDGET
   =============================== */

.widget.image img {
  display:block;
  max-width: 100%;
  border: 0;
  border-width: 0;
}
/* ... */

